swag person, changed description (main func), funcdoc comment in courses
