# app/domain/model/person.go
@@ -22,6 +22,11 @@ type Person struct {
 	Deleted    bool      `json:"deleted" validate:"omitempty"`
 }
 
+type PersonListDto struct {
+	Metadata PaginationResponse `json:"_metadata"`
+	Persons  []Person           `json:"persons_dto"`
+}
+
 func translateError(err error, trans ut.Translator) (errs []error) {
 	if err == nil {
 		return nil
